--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,125 +1,136 @@
-<%-include("./partials/header")-%>
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="UTF-8">
     <title>Register</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/fe_style.css">
+    <script src="/script/script.js" defer></script>
 </head>
-    <body>
-        <% if (UsernameAvailability == false) { %>
-            <p>Username is already taken.</p>
-        <% } %>
-        <% if (PhoneNumberAvailability == false) { %>
-            <p>Phone number is already taken.</p>
-        <% } %>
-        <% if ( EmailAvailability == false) { %>
-            <p>Email is already taken.</p>
-        <% } %>
-        
-        <% if (usernameRegexAllowed == false) { %>
-            <p>consist of 8 to 30 characters, including uppercase and lowercase letters, numbers, underscores, and hyphens..</p>
-        <% } %>
-        <% if (emailRegexAllowed == false) { %>
-            <p>Ensures that the email address contains a username part, followed by the "@" symbol, a domain part, and a valid top-level domain.</p>
-        <% } %>
-        <% if (passwordRegexAllowed == false) { %>
-            <p>//At least one lowercase letter,  at least one uppercase letter, at least one digit, matches any combination of alphanumeric characters and special characters (non-whitespace) with a minimum length of 8..</p>
-        <% } %>
-        <% if (phoneNumberRegexAllowed == false) { %>
-            <p>presence of a country code, parentheses around the area code, and the use of hyphens, dots, or spaces as separators.</p>
-        <% } %>
-        <div id="registerModal" class="fixed inset-0 flex items-center justify-center z-50">
-            <div class="bg-white rounded-lg shadow-lg p-6 w-1/2">
-                <h2 class="text-2xl font-semibold mb-4">Register</h2>
-    
-        <form method="POST" action="/register">
-            <div class="mb-4">
-                <label for="username" class="block text-gray-700 font-semibold mb-2">Username</label>
-                <input type="text" id="username" name="username"
-                    class="border border-gray-300 rounded px-4 py-2 w-full" required>
-            </div>
 
-            <br><br>
-
-            <div class="mb-4">
-                <label for="email" class="block text-gray-700 font-semibold mb-2">Email</label>
-                <input type="email" id="email" name="email" class="border border-gray-300 rounded px-4 py-2 w-full"
-                    required>
-            </div>
-
-            <br><br>
-
-            <div class="mb-4">
-                <label for="password" class="block text-gray-700 font-semibold mb-2">Password</label>
-                <input type="password" id="password" name="password"
-                    class="border border-gray-300 rounded px-4 py-2 w-full" required>
-            </div>
-
-            <br><br>
-
-            <div class="mb-4">
-                <label for="confirmPassword" class="block text-gray-700 font-semibold mb-2">Confirm Password</label>
-                <input type="password" id="confirmPassword" name="confirmPassword"
-                    class="border border-gray-300 rounded px-4 py-2 w-full" required>
-            </div>
-
-            <br><br>
-
-            <div class="mb-4">
-                <label for="firstName" class="block text-gray-700 font-semibold mb-2">First Name</label>
-                <input type="text" id="firstName" name="firstName"
-                    class="border border-gray-300 rounded px-4 py-2 w-full" required>
-            </div>
-
-            <br><br>
-
-            <div class="mb-4">
-                <label for="lastName" class="block text-gray-700 font-semibold mb-2">Last Name</label>
-                <input type="text" id="lastName" name="lastName"
-                    class="border border-gray-300 rounded px-4 py-2 w-full" required>
-            </div>
-
-            <br><br>
-
-        <div class="mb-6">
-            <label for="phoneNumber" class="block text-gray-700 font-semibold mb-2">Phone Number</label>
-            <input type="tel" id="phoneNumber" name="phoneNumber"
-                class="border border-gray-300 rounded px-4 py-2 w-full" required>
+<body class="flex flex-col h-screen bg-black text-cfab7a font-raleway">
+    <a href="#" class="absolute top-0 right-0 m-4 text-4xl hover:text-white">TixOnline</a>
+    <div class="flex flex-1">
+        <div class="flex items-center justify-center w-1/2">
+            <img src="/images/cinemabg.png" alt="Image" class="max-w-full max-h-full">
         </div>
-
-            <br><br>
-            <div class="text-right">
-                <button type="submit"
-                    class="bg-red-600 hover:bg-red-700 text-white font-semibold py-2 px-4 rounded"onclick="return comparePasswords()">Register</button>
+        <div id="registerModal" class="flex items-center justify-center w-1/2">
+            <div class="w-full max-w-xl p-8">
+                <h2 class="mb-6 text-3xl font-bold font-raleway">Register</h2>
+                <form method="POST" action="/register">
+                    <% if (UsernameAvailability==false) { %>
+                        <p>Username is already taken.</p>
+                        <% } %>
+                            <% if (PhoneNumberAvailability==false) { %>
+                                <p>Phone number is already taken.</p>
+                                <% } %>
+                                    <% if ( EmailAvailability==false) { %>
+                                        <p>Email is already taken.</p>
+                                        <% } %>
+                                            <% if (usernameRegexAllowed==false) { %>
+                                                <p>consist of 8 to 30 characters, including uppercase and lowercase
+                                                    letters, numbers, underscores, and hyphens..</p>
+                                                <% } %>
+                                                    <% if (emailRegexAllowed==false) { %>
+                                                        <p>Ensures that the email address contains a username part,
+                                                            followed by the "@" symbol, a domain part, and a valid
+                                                            top-level domain.</p>
+                                                        <% } %>
+                                                            <% if (passwordRegexAllowed==false) { %>
+                                                                <p>At least one lowercase letter, at least one
+                                                                    uppercase letter, at least one digit, matches
+                                                                    any combination of alphanumeric characters and
+                                                                    special characters (non-whitespace) with a
+                                                                    minimum length of 8.</p>
+                                                                <% } %>
+                                                                    <% if (phoneNumberRegexAllowed==false) { %>
+                                                                        <p>Presence of a country code, parentheses
+                                                                            around the area code, and the use of
+                                                                            hyphens, dots, or spaces as separators.
+                                                                        </p>
+                                                                        <% } %>
+                                                                            <div
+                                                                                class="px-3 py-8 font-semibold rounded custom-btn">
+                                                                                <div class="mb-4">
+                                                                                    <label for="username"
+                                                                                        class="block mb-2 font-semibold text-black">Username</label>
+                                                                                    <input type="text" id="username"
+                                                                                        name="username"
+                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                        required>
+                                                                                </div>
+                                                                                <br><br>
+                                                                                <div class="mb-4">
+                                                                                    <label for="email"
+                                                                                        class="block mb-2 font-semibold text-black">Email</label>
+                                                                                    <input type="email" id="email"
+                                                                                        name="email"
+                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                        required>
+                                                                                </div>
+                                                                                <br><br>
+                                                                                <div class="mb-4">
+                                                                                    <label for="password"
+                                                                                        class="block mb-2 font-semibold text-black">Password</label>
+                                                                                    <input type="password" id="password"
+                                                                                        name="password"
+                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                        required>
+                                                                                </div>
+                                                                                <br><br>
+                                                                                <div class="mb-4">
+                                                                                    <label for="confirmPassword"
+                                                                                        class="block mb-2 font-semibold text-black">Confirm
+                                                                                        Password</label>
+                                                                                    <input type="password"
+                                                                                        id="confirmPassword"
+                                                                                        name="confirmPassword"
+                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                        required>
+                                                                                </div>
+                                                                                <br><br>
+                                                                                <div class="mb-4">
+                                                                                    <label for="firstName"
+                                                                                        class="block mb-2 font-semibold text-black">First
+                                                                                        Name</label>
+                                                                                    <input type="text" id="firstName"
+                                                                                        name="firstName"
+                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                        required>
+                                                                                </div>
+                                                                                <br><br>
+                                                                                <div class="mb-4">
+                                                                                    <label for="lastName"
+                                                                                        class="block mb-2 font-semibold text-black">Last
+                                                                                        Name</label>
+                                                                                    <input type="text" id="lastName"
+                                                                                        name="lastName"
+                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                        required>
+                                                                                </div>
+                                                                                <br><br>
+                                                                                <div class="mb-6">
+                                                                                    <label for="phoneNumber"
+                                                                                        class="block mb-2 font-semibold text-black">Phone
+                                                                                        Number</label>
+                                                                                    <input type="tel" id="phoneNumber"
+                                                                                        name="phoneNumber"
+                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                        required>
+                                                                                </div>
+                                                                                <br><br>
+                                                                                <div class="text-right">
+                                                                                    <button type="submit"
+                                                                                        class="px-4 py-2 font-semibold text-white bg-red-600 rounded hover:bg-red-700"
+                                                                                        onclick="return comparePasswords()">Register</button>
+                                                                                </div>
+                                                                            </div>
+                </form>
             </div>
-        </form>
-        <path fill="none" d="M0 0h24v24H0z" />
-        <path
-            d="M19 6.41l-1.41-1.41L12 10.17 6.41 4.59 5 6l6 6-6 6 1.41 1.41L12 13.83l5.59 5.59 1.41-1.41L13.83 12l5.59-5.59z" />
-        </svg>
-        <button id="closeModalBtn" class="absolute top-0 right-0 mt-4 mr-4 text-white hover:text-gray-800">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-6 w-6 close-icon">
-                <path fill="none" d="M0 0h24v24H0z" />
-                <path
-                    d="M19 6.41l-1.41-1.41L12 10.17 6.41 4.59 5 6l6 6-6 6 1.41 1.41L12 13.83l5.59 5.59 1.41-1.41L13.83 12l5.59-5.59z" />
-            </svg>
-        </button>
-        <script>
-            function comparePasswords() {
-                var password = document.getElementById("password").value;
-                var confirmPassword = document.getElementById("confirmPassword").value;
-    
-                if (password !== confirmPassword) {
-                    alert("Passwords do not match.");
-                    return false; // Prevent form submission
-                }
-                
-                return true; // Allow form submission
-            }
-        </script>
         </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
-
-
-   
