--- a/views/home.ejs
+++ b/views/home.ejs
@@ -127,22 +127,23 @@
 </section>
 
 <!-- Movie Details Popup -->
-<div id="movieDetailsPopup"
-    class="fixed inset-0 z-50 flex items-center justify-center hidden bg-opacity-75 bg-slate-900">
-    <div class="w-1/2 p-6 rounded-lg shadow-lg bg-gradient-to-bl from-gray-800 to-gray-900">
-        <h2 id="movieTitle" class="mb-4 text-2xl font-semibold text-white lg"></h2>
-        <p id="movieSynopsis" class="mb-4 text-cfab7a"></p>
-        <a href="/schedules" class="px-4 py-2 font-semibold text-white bg-red-600 rounded hover:bg-red-700">Book
-            Now</a>
-        <button id="closeMovieDetailsBtn" class="absolute top-0 right-0 mt-4 mr-4 text-white hover:text-gray-800">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 close-icon">
-                <path fill="none" d="M0 0h24v24H0z" />
-                <path
-                    d="M19 6.41l-1.41-1.41L12 10.17 6.41 4.59 5 6l6 6-6 6 1.41 1.41L12 13.83l5.59 5.59 1.41-1.41L13.83 12l5.59-5.59z" />
-            </svg>
+<div id="movieDetailsPopup" class="fixed inset-0 z-50 flex items-center justify-center hidden bg-opacity-75 bg-slate-900">
+    <div class="w-1/2 p-6 rounded-lg shadow-lg bg-gradient-to-bl from-gray-800 to-gray-900 flex flex-col">
+      <div class="flex justify-end">
+        <button id="closeMovieDetailsBtn" class="text-gray-400 w-14 h-14 dark:text-gray-200">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 close-icon">
+            <path fill="none" d="M0 0h24v24H0z" />
+            <path d="M19 6.41l-1.41-1.41L12 10.17 6.41 4.59 5 6l6 6-6 6 1.41 1.41L12 13.83l5.59 5.59 1.41-1.41L13.83 12l5.59-5.59z" />
+          </svg>
         </button>
+      </div>
+      <h2 id="movieTitle" class="mb-4 text-2xl font-semibold text-white lg"></h2>
+      <p id="movieSynopsis" class="mb-4 text-cfab7a"></p>
+        <a href="/schedules" class="px-4 py-2 font-semibold text-white bg-red-600 rounded hover:bg-red-700">Book Now</a>
     </div>
-</div>
+  </div>
+  
+
 
 <!-- Features Section -->
 <section id="about" class="bg-black py-16 text-[#cfab7a]">
