--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,12 +45,7 @@
                                                                     special characters (non-whitespace) with a
                                                                     minimum length of 8.</p>
                                                                 <% } %>
-                                                                    <% if (phoneNumberRegexAllowed==false) { %>
-                                                                        <p>Presence of a country code, parentheses
-                                                                            around the area code, and the use of
-                                                                            hyphens, dots, or spaces as separators.
-                                                                        </p>
-                                                                        <% } %>
+                                            
                                                                             <div
                                                                                 class="px-3 py-8 font-semibold rounded custom-btn">
                                                                                 <div class="mb-4">
@@ -100,8 +95,8 @@
                                                                                             class="block mb-2 font-semibold text-black">First
                                                                                             Name</label>
                                                                                         <input type="text"
-                                                                                            id="firstName"
-                                                                                            name="firstName"
+                                                                                            id="first_name"
+                                                                                            name="first_name"
                                                                                             class="w-full px-4 py-2 border border-gray-300 rounded"
                                                                                             placeholder="Insert first name"
                                                                                             required>
@@ -110,8 +105,8 @@
                                                                                         <label for="lastName"
                                                                                             class="block mb-2 font-semibold text-black">Last
                                                                                             Name</label>
-                                                                                        <input type="text" id="lastName"
-                                                                                            name="lastName"
+                                                                                        <input type="text" id="last_name"
+                                                                                            name="last_name"
                                                                                             class="w-full px-4 py-2 border border-gray-300 rounded"
                                                                                             placeholder="Insert last name"
                                                                                             required>
@@ -121,8 +116,8 @@
                                                                                     <label for="phoneNumber"
                                                                                         class="block mb-2 font-semibold text-black">Phone
                                                                                         Number</label>
-                                                                                    <input type="tel" id="phoneNumber"
-                                                                                        name="phoneNumber"
+                                                                                    <input type="tel" id="phone_number"
+                                                                                        name="phone_number"
                                                                                         class="w-full px-4 py-2 border border-gray-300 rounded"
                                                                                         placeholder="08xxxxxxxxxx"
                                                                                         required>
